--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "slayden-website",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://slaydenriley.github.io/slayden-website",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "antd": "^5.24.1",
@@ -16,8 +19,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-scroll": "^1.9.3",
-    "sass": "^1.85.0",
-    "tsparticles": "^3.8.1"
+    "sass": "^1.85.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
